kubernetes/apps/vuabaohiem/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vuabaohiem
  labels:
    app.kubernetes.io/name: vuabaohiem
    app.kubernetes.io/managed-by: flux
