kubernetes/apps/vuabaohiem/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ingress-to-vuabaohiem
  namespace: vuabaohiem
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ingress
  to:
    - group: ""
      kind: Service
